# logsift

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: guide.md
docs/demos/: index.md  post-mortem.md  what-changed.md  you-just-got-paged.md
docs/tapes/: analyze.tape  anomaly.tape  changed-01-baseline.tape  changed-02-anomalies.tape  changed-03-analyze.tape  changed-04-drilldown.tape  changed-05-spikes.tape  filter.tape  goto-line.tape  hero-anomaly.tape  hero.tape  jump-to-time.tape  paged-01-open.tape  paged-02-orient.tape  paged-03-errors.tape  paged-04-analyze.tape  paged-05-trace.tape  paged-06-timewindow.tape  postmortem-01-bookmark.tape  postmortem-02-annotate.tape  postmortem-03-session.tape  postmortem-04-export.tape  search.tape
scripts/: gen_demo_logs.py  gen_promo_logs.py  perf_test.py
src/logdelve/: __init__.py  __main__.py  anomaly.py  app.py  aws.py  cli.py  colors.py  config.py  export.py  filters.py  keybindings.py  models.py  parser.py  reader.py  search.py  session.py  templates.py  utils.py
src/logdelve/commands/: __init__.py  cloudwatch.py  inspect.py
src/logdelve/parsers/: __init__.py  apache.py  auto.py  base.py  docker.py  iso.py  journalctl.py  kubernetes.py  logfmt.py  python_logging.py  syslog.py
src/logdelve/styles/: app.tcss
src/logdelve/widgets/: __init__.py  annotation_dialog.py  demo_overlay.py  export_dialog.py  filter_bar.py  filter_dialog.py  filter_manage_dialog.py  groups_dialog.py  help_screen.py  log_line.py  log_view.py  navigation_dialog.py  search_dialog.py  session_dialog.py  status_bar.py  theme_dialog.py  timestamp_input.py
src/logsift/: __init__.py  __main__.py  app.py  aws.py  cli.py  config.py  filters.py  models.py  parser.py  reader.py  session.py  utils.py
src/logsift/commands/: __init__.py  cloudwatch.py  inspect.py
src/logsift/widgets/: __init__.py  filter_bar.py  filter_dialog.py  filter_manage_dialog.py  help_screen.py  log_line.py  log_view.py  session_dialog.py  status_bar.py
tests/: conftest.py  test_anomaly.py  test_cloudwatch.py  test_filters.py  test_keybindings.py  test_log_line.py  test_models.py  test_parser.py  test_reader.py  test_session.py  test_templates.py
tests/test_parsers/: test_apache.py  test_auto.py  test_base.py  test_docker.py  test_integration.py  test_iso.py  test_journalctl.py  test_kubernetes.py  test_logfmt.py  test_python_logging.py  test_registry.py  test_syslog.py
