[project]
name = "logdelve"
version = "0.2.0"
description = "A CLI/TUI tool for viewing and filtering log lines"
readme = "README.md"
license = "MIT"
authors = [{ name = "Christian Assing", email = "chris@ca-net.org" }]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "aiofiles>=24.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "dateparser>=1.3.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/chassing/logdelve"
Repository = "https://github.com/chassing/logdelve"
Issues = "https://github.com/chassing/logdelve/issues"

[project.scripts]
logdelve = "logdelve.cli:main"

[project.optional-dependencies]
aws = ["boto3>=1.42.49"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-aiofiles>=25.1.0.20251011",
    "boto3-stubs[logs]>=1.42.49",
    "types-dateparser>=1.3.0.20260211",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
