[project]
name = "logdelve"
version = "0.2.0"
description = "A CLI/TUI tool for viewing and filtering log lines"
readme = "README.md"
license = "MIT"
authors = [{ name = "Christian Assing", email = "chris@ca-net.org" }]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "aiofiles>=24.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "dateparser>=1.3.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/chassing/logdelve"
Repository = "https://github.com/chassing/logdelve"
Issues = "https://github.com/chassing/logdelve/issues"

[project.scripts]
logdelve = "logdelve.cli:main"

[project.optional-dependencies]
aws = ["boto3>=1.42.49"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-aiofiles>=25.1.0.20251011",
    "boto3-stubs[logs]>=1.42.49",
    "types-dateparser>=1.3.0.20260211",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "PLR0913", # Too many arguments in function definition
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "TRY300",  # try-consider-else
    "RUF067",  # __init__
    "PLR0917", # Too many positional  arguments
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "PLR2004",
    "PLR6301",
    "D101",
    "D102",
    "D104",
    "FBT003",
    "PLC1901",
    "PLC0415",
    "PLC2701",
    "PLR1714",
]

[tool.mypy]
python_version = "3.13"
strict = true
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
